--- a/student-manager/src/App.css
+++ b/student-manager/src/App.css
@@ -1,6 +1,32 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-style: normal;
+  list-style: none;
   text-align: center;
+}
+header {
+  height: 6vh;
+  background-color: #ff1fdd;
+  color: #fbfaf4;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-bottom: 40px;
+}
+nav ul {
+  display: flex;
+  gap: 10px;
+}
+nav a {
+  color: #fbfaf4;
+  cursor: pointer;
+  transition: 1.5ms;
+}
+nav a:hover {
+  color: palevioletred;
+  border-bottom: 2px solid plum;
 }
